--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section>
         <h2>Demo Video</h2>
         <p>Watch the demo video of the project.</p>
-        <a href="link-to-video">Link to Demo Video</a>
+        <a href="https://www.youtube.com/watch?v=b7Ddg6nfdQQ">Link to Demo Video</a>
     </section>
 
     <section>
