--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section>
         <h2>Project Poster</h2>
         <p>View my project poster.</p>
-        <a href="link-to-poster">Link to Poster</a>
+        <a href="https://github.com/sbzng/landingPage/blob/main/FYP%20poster.png">Link to Poster</a>
     </section>
 
     <section>
